fixed extra space styling issue on index page and fixed sign-out/redirect issue.  Lesson: POST and don't redirect when implementing logout.  Watch out for aggressive mobile caches.

--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -406,7 +406,7 @@ special case is the .heading
 /* ------- index-view ---------- */
 #index-view .banner{
 	margin: 0.5em 0 0 0;
-	font-size: 4em;
+	font-size: 3.5em;
 	color: #a0e4f9;
 }
 #index-view section {
